--- a/analysis_of_cma_lcshsV2(IN_DESENV).ipynb
+++ b/analysis_of_cma_lcshsV2(IN_DESENV).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "name": "analysis_of_cma_lcshsV2(IN DESENV).ipynb",
-      "authorship_tag": "ABX9TyPUCgnKNsdWK16Hl3LTFvGA",
+      "authorship_tag": "ABX9TyOYSEdfvswvL/kckXjvfwOX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "import pandas as pd\n",
         "\n",
         "# Read the data from the CSV file\n",
-        "data = pd.read_csv(\"LOH3.csv\", sep=\";\")\n",
+        "data = pd.read_csv(\"LOH.csv\", sep=\";\")\n",
         "\n",
         "# Apply a filter to exclude chromosomes X and Y\n",
         "data = data.loc[(data['Chrom'] != 'X') & (data['Chrom'] != 'Y')]\n",
@@ -105,17 +105,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uRe5zTgCdZTP",
-        "outputId": "987b9c29-2d1f-4442-bc87-e0bbd3098088"
+        "outputId": "d8670c4c-e344-4495-e3fd-53053cc9632b"
       },
-      "execution_count": 92,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-92-4174725c51df>:10: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+            "<ipython-input-123-6cb181c1a486>:10: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
             "  data['Tamanho'] = data['Tamanho'].str.replace('.', '').astype(int)\n",
-            "<ipython-input-92-4174725c51df>:13: UserWarning: This pattern has match groups. To actually get the groups, use str.extract.\n",
+            "<ipython-input-123-6cb181c1a486>:13: UserWarning: This pattern has match groups. To actually get the groups, use str.extract.\n",
             "  data_autosomes = data.loc[data['Chrom'].str.contains('^([1-9]|[1-9][0-9])$')]\n"
           ]
         }
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "lzniRUaB3mQ2"
       },
-      "execution_count": 93,
+      "execution_count": 124,
       "outputs": []
     },
     {
@@ -216,7 +216,7 @@
         "        chrom_dict[chrom].append((start, end))\n",
         "\n",
         "# Loop pelos cromossomos\n",
-        "threshold = 0.02  # Fração mínima de amostras com trechos de homozygose\n",
+        "threshold = 0.005  # Fração mínima de amostras com trechos de homozygose\n",
         "homozygous_dict = {}\n",
         "for chrom, coords in chrom_dict.items():\n",
         "    total_samples = len(df)\n",
@@ -240,12 +240,12 @@
         "\n",
         "# Gera nova tabela CSV com informações de cromossomos e frações de amostras com trechos de homozygose\n",
         "homozygous_df = pd.DataFrame({'Chromosome': list(homozygous_dict.keys()), 'Homozygous Fraction': list(homozygous_dict.values())})\n",
-        "homozygous_df.to_csv('homozygous_regions4.csv', index=False)\n"
+        "homozygous_df.to_csv('homozygous_regions.csv', index=False)\n"
       ],
       "metadata": {
         "id": "DUfC-U5LM2w1"
       },
-      "execution_count": 94,
+      "execution_count": 133,
       "outputs": []
     },
     {
@@ -300,7 +300,7 @@
       "metadata": {
         "id": "OLmIC-EGVIaH"
       },
-      "execution_count": 95,
+      "execution_count": 140,
       "outputs": []
     },
     {
@@ -314,13 +314,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 127,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TjZPx6gCN--c",
-        "outputId": "c703e457-bddb-4a3f-9e08-da5a465e7099"
+        "outputId": "b3feb6cd-ea3c-44f6-b2a1-7226a218971a"
       },
       "outputs": [
         {
@@ -400,46 +400,10 @@
     {
       "cell_type": "code",
       "source": [
-        "print(chrom_df)"
-      ],
-      "metadata": {
-        "id": "QnEf1IZFWgJN",
-        "outputId": "ed0b864b-f4f9-4ffc-adf3-051737b2cf06",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "     Chrom cytoband      start        end  Frequency\n",
-            "173      3   p21.31   46484498   51474182        0.0\n",
-            "174      3    q22.2  135293279  140278952        0.0\n",
-            "175      3   p21.31   48531739   53234994        0.0\n",
-            "176      3   p21.31   47868563   52569949        0.0\n",
-            "177      3   p21.31   46480701   51095279        0.0\n",
-            "..     ...      ...        ...        ...        ...\n",
-            "232      3   p21.31   50202312   53234057        0.0\n",
-            "233      3   p21.31   50088300   53101580        0.0\n",
-            "234      3   p21.31   49878112   52889771        0.0\n",
-            "235      3    q22.2  135621103  138632108        0.0\n",
-            "236      3   p21.31   50202312   53212716        0.0\n",
-            "\n",
-            "[64 rows x 5 columns]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "import pandas as pd\n",
         "\n",
         "# Ler o arquivo CSV\n",
-        "data = pd.read_csv('LOH3.csv', sep=';')\n",
+        "data = pd.read_csv('LOH.csv', sep=';')\n",
         "\n",
         "# Contar a quantidade de valores únicos na coluna \"File\"\n",
         "file_count = data['File'].nunique()\n",
@@ -458,20 +422,20 @@
       ],
       "metadata": {
         "id": "Mt-d62ocmygS",
-        "outputId": "815c353f-3ebb-47a5-9c09-0554abfd0c81",
+        "outputId": "c17d2f4c-e9d9-4692-cf76-39a75b39ef0c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 97,
+      "execution_count": 141,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "O total de casos na coluna 'File' é: 371\n",
+            "O total de casos na coluna 'File' é: 417\n",
             "   Total de casos\n",
-            "0             371\n"
+            "0             417\n"
           ]
         }
       ]
@@ -480,7 +444,7 @@
       "cell_type": "code",
       "source": [
         "# Ler o arquivo nova_dataframe_fron6.csv\n",
-        "df = pd.read_csv('nova_dataframe_fron6.csv', sep=\";\", decimal='.')\n",
+        "df = pd.read_csv('nova_dataframe_fron.csv', sep=\";\", decimal='.')\n",
         "\n",
         "# Renomear as colunas\n",
         "df = df.rename(columns={'Chrom': 'chrom', 'start': 'start_pos', 'end': 'end_pos'})\n",
@@ -500,7 +464,7 @@
       "metadata": {
         "id": "1A5jl1knBUgA"
       },
-      "execution_count": 114,
+      "execution_count": 142,
       "outputs": []
     },
     {
@@ -526,7 +490,7 @@
       "metadata": {
         "id": "H9vdDgbkEdK5"
       },
-      "execution_count": 116,
+      "execution_count": 143,
       "outputs": []
     },
     {
@@ -545,7 +509,7 @@
       "metadata": {
         "id": "gYCk79WGFAoJ"
       },
-      "execution_count": 121,
+      "execution_count": 144,
       "outputs": []
     },
     {
@@ -555,29 +519,44 @@
       ],
       "metadata": {
         "id": "ShQ9Z6fpsU5d",
-        "outputId": "3806ce8a-a3f6-4311-d2a8-11883028c642",
+        "outputId": "3e52ee33-1b1f-455a-bd02-2cea9fdcb2eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 122,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "     chrom  start_region  end_region  frequencia\n",
-            "46       1     144077000   249250533    0.029650\n",
-            "49       1     146881000   249250352    0.005391\n",
-            "87       1     147385000   249250414    0.005391\n",
-            "100      2      55365000   243198887    0.005391\n",
-            "111      2      95341000   243198461    0.005391\n",
-            "116      2      95341000   243198664    0.008086\n",
-            "117      2      95341000   243198711    0.005391\n",
-            "126      2      95550000   243198972    0.005391\n",
-            "128      2      95550000   243199110    0.005391\n",
-            "134      2     130732000   243199078    0.005391\n",
-            "203      3      93558000   198022166    0.005391\n"
+            "46       1     144077000   249250533    0.026379\n",
+            "116      2      95341000   243198664    0.007194\n",
+            "461     11      47885000   135005787    0.014388\n",
+            "462     11      47910000   135005636    0.040767\n",
+            "471     11      48144000   135005636    0.007194\n",
+            "599     16      30877000    90354544    0.007194\n",
+            "609     16      31356000    90354544    0.009592\n",
+            "611     16      31376000    90354544    0.007194\n",
+            "612     16      31386000    90354544    0.007194\n",
+            "613     16      31397000    90354544    0.009592\n",
+            "619     16      31460000    90354544    0.011990\n",
+            "623     16      31542000    90354544    0.021583\n",
+            "624     16      31554000    90354544    0.009592\n",
+            "626     16      31576000    90354544    0.016787\n",
+            "628     16      31587000    90354544    0.059952\n",
+            "630     16      31609000    90354544    0.057554\n",
+            "632     16      31621000    90354544    0.016787\n",
+            "633     16      31630000    90354544    0.014388\n",
+            "638     16      31820000    90354544    0.007194\n",
+            "640     16      31850000    90354544    0.007194\n",
+            "641     16      31860000    90354544    0.067146\n",
+            "642     16      31873000    90354544    0.088729\n",
+            "643     16      31878000    90354544    0.016787\n",
+            "644     16      31882000    90354544    0.016787\n",
+            "645     16      31892000    90354544    0.016787\n",
+            "648     16      31957000    90354544    0.021583\n"
           ]
         }
       ]
