--- a/analysis_of_cma_lcshsV2(IN_DESENV).ipynb
+++ b/analysis_of_cma_lcshsV2(IN_DESENV).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "name": "analysis_of_cma_lcshsV2(IN DESENV).ipynb",
-      "authorship_tag": "ABX9TyOYSEdfvswvL/kckXjvfwOX",
+      "authorship_tag": "ABX9TyORR52oV4nKi5fYuECiegct",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -496,6 +496,48 @@
     {
       "cell_type": "code",
       "source": [
+        "# Agrupar as regiões por cromossomo, citobanda, tamanho final e calcular a frequência\n",
+        "grouped = merged_df.groupby(['chrom', 'cytoband', 'start_region', 'end_region']).size().reset_index(name='count')\n",
+        "grouped['freq'] = grouped['count'] / file_count\n",
+        "\n",
+        "# Selecionar apenas as regiões com frequência igual ou maior que 5%\n",
+        "freq_5 = grouped[grouped['freq'] >= 0.005]\n",
+        "\n",
+        "# Incluir o tamanho final das regiões\n",
+        "freq_5['size'] = freq_5['end_region'] - freq_5['start_region']\n",
+        "\n",
+        "# Selecionar as colunas de interesse\n",
+        "result3 = freq_5[['chrom', 'cytoband', 'start_region', 'end_region', 'size', 'freq']]\n",
+        "\n",
+        "# Salvar o resultado em um arquivo CSV\n",
+        "result3.to_csv('output_regions_freq_5.csv', sep=\";\", index=False)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2cKyV3cbI-Uf",
+        "outputId": "a65a61d4-c4c0-4160-af10-307bce0b4571"
+      },
+      "execution_count": 152,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-152-496d88841151>:9: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  freq_5['size'] = freq_5['end_region'] - freq_5['start_region']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Calcular a frequência de cada região genômica\n",
         "freq = result2.groupby(['chrom', 'start_region', 'end_region']).size().reset_index(name='frequencia')\n",
         "freq['frequencia'] = freq['frequencia'] / file_count\n",
@@ -509,54 +551,54 @@
       "metadata": {
         "id": "gYCk79WGFAoJ"
       },
-      "execution_count": 144,
+      "execution_count": 151,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(freq_5)"
+        "print(result3)"
       ],
       "metadata": {
         "id": "ShQ9Z6fpsU5d",
-        "outputId": "3e52ee33-1b1f-455a-bd02-2cea9fdcb2eb",
+        "outputId": "27edeafd-14e1-48aa-99f1-c9a428f9ca20",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 145,
+      "execution_count": 153,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "     chrom  start_region  end_region  frequencia\n",
-            "46       1     144077000   249250533    0.026379\n",
-            "116      2      95341000   243198664    0.007194\n",
-            "461     11      47885000   135005787    0.014388\n",
-            "462     11      47910000   135005636    0.040767\n",
-            "471     11      48144000   135005636    0.007194\n",
-            "599     16      30877000    90354544    0.007194\n",
-            "609     16      31356000    90354544    0.009592\n",
-            "611     16      31376000    90354544    0.007194\n",
-            "612     16      31386000    90354544    0.007194\n",
-            "613     16      31397000    90354544    0.009592\n",
-            "619     16      31460000    90354544    0.011990\n",
-            "623     16      31542000    90354544    0.021583\n",
-            "624     16      31554000    90354544    0.009592\n",
-            "626     16      31576000    90354544    0.016787\n",
-            "628     16      31587000    90354544    0.059952\n",
-            "630     16      31609000    90354544    0.057554\n",
-            "632     16      31621000    90354544    0.016787\n",
-            "633     16      31630000    90354544    0.014388\n",
-            "638     16      31820000    90354544    0.007194\n",
-            "640     16      31850000    90354544    0.007194\n",
-            "641     16      31860000    90354544    0.067146\n",
-            "642     16      31873000    90354544    0.088729\n",
-            "643     16      31878000    90354544    0.016787\n",
-            "644     16      31882000    90354544    0.016787\n",
-            "645     16      31892000    90354544    0.016787\n",
-            "648     16      31957000    90354544    0.021583\n"
+            "     chrom cytoband  start_region  end_region       size      freq\n",
+            "46       1    q21.1     144077000   249250533  105173533  0.026379\n",
+            "116      2    q11.1      95341000   243198664  147857664  0.007194\n",
+            "456     11    p11.2      47885000   135005787   87120787  0.014388\n",
+            "457     11    p11.2      47910000   135005636   87095636  0.040767\n",
+            "466     11    p11.2      48144000   135005636   86861636  0.007194\n",
+            "593     16    p11.2      30877000    90354544   59477544  0.007194\n",
+            "603     16    p11.2      31356000    90354544   58998544  0.009592\n",
+            "605     16    p11.2      31376000    90354544   58978544  0.007194\n",
+            "606     16    p11.2      31386000    90354544   58968544  0.007194\n",
+            "607     16    p11.2      31397000    90354544   58957544  0.009592\n",
+            "613     16    p11.2      31460000    90354544   58894544  0.011990\n",
+            "617     16    p11.2      31542000    90354544   58812544  0.021583\n",
+            "618     16    p11.2      31554000    90354544   58800544  0.009592\n",
+            "620     16    p11.2      31576000    90354544   58778544  0.016787\n",
+            "622     16    p11.2      31587000    90354544   58767544  0.059952\n",
+            "624     16    p11.2      31609000    90354544   58745544  0.057554\n",
+            "626     16    p11.2      31621000    90354544   58733544  0.016787\n",
+            "627     16    p11.2      31630000    90354544   58724544  0.014388\n",
+            "632     16    p11.2      31820000    90354544   58534544  0.007194\n",
+            "634     16    p11.2      31850000    90354544   58504544  0.007194\n",
+            "635     16    p11.2      31860000    90354544   58494544  0.067146\n",
+            "636     16    p11.2      31873000    90354544   58481544  0.088729\n",
+            "637     16    p11.2      31878000    90354544   58476544  0.016787\n",
+            "638     16    p11.2      31882000    90354544   58472544  0.016787\n",
+            "639     16    p11.2      31892000    90354544   58462544  0.016787\n",
+            "642     16    p11.2      31957000    90354544   58397544  0.021583\n"
           ]
         }
       ]
