--- a/analysis_of_cma_lcshs_final.ipynb
+++ b/analysis_of_cma_lcshs_final.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://gist.github.com/tiagochavo87/85fc2bce642ef04735cd531aa0ee2de1#file-analysis_of_cma_lcshs-ipynb",
-      "authorship_tag": "ABX9TyMnZa4tOC6TextCRGxtJJX9",
+      "authorship_tag": "ABX9TyMK6nlURStoj8z6wYFFdnU8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,8 +32,8 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "# Read the data from the CSV file\n",
-        "data = pd.read_csv(\"LOHx.csv\", sep=\";\")\n",
+        "# Read the data from the CSV file = Input of data taken from CHAs (Chromosome Analysis Suite)= Columns (File; type; Chrom; cytoband; Size; Mark; Genes Q.; Genes Desc; OMIN; OMIM; Microarray Name..)\n",
+        "data = pd.read_csv(\"lcsh_data.csv\", sep=\";\")\n",
         "\n",
         "# Apply a filter to exclude chromosomes X and Y\n",
         "data = data.loc[(data['Chrom'] != 'X') & (data['Chrom'] != 'Y')]\n",
@@ -105,17 +105,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uRe5zTgCdZTP",
-        "outputId": "320b9166-6147-4263-fe99-1755a6c519a5"
+        "outputId": "3c442243-09b2-494c-f600-f1de14117b84"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-98-4b4fab267ef6>:10: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+            "<ipython-input-10-1819c0c2fd3f>:10: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
             "  data['Tamanho'] = data['Tamanho'].str.replace('.', '').astype(int)\n",
-            "<ipython-input-98-4b4fab267ef6>:13: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
+            "<ipython-input-10-1819c0c2fd3f>:13: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
             "  data_autosomes = data.loc[data['Chrom'].str.contains('^([1-9]|[1-9][0-9])$')]\n"
           ]
         }
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "lzniRUaB3mQ2"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -191,9 +191,9 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "# Carrega o arquivo CSV\n",
+        "# Load the CSV file\n",
         "df = pd.read_csv(\"LCSHs_>_3_<_5.csv\", sep=\";\")\n",
-        "# Extrai as informações da coluna \"Microarray Nome..\"\n",
+        "# Extract information from the \"Microarray Nome..\" column\n",
         "df['start'] = df['Microarray Nome..'].str.extract('\\((.*?)\\-')\n",
         "df['end'] = df['Microarray Nome..'].str.extract('\\-(.*?)\\)')\n",
         "\n",
@@ -207,10 +207,10 @@
         "    else:\n",
         "        return pd.Series(['', ''])\n",
         "\n",
-        "# Remove a coluna original\n",
+        "# Remove the original column\n",
         "df.drop('Microarray Nome..', axis=1, inplace=True)\n",
         "\n",
-        "# Cria uma nova dataframe com as colunas \"Chrom\", \"cytoband\", \"start\" e \"end\"\n",
+        "# Create a new dataframe with the columns \"Chrom\", \"cytoband\", \"start\", and \"end\"\n",
         "new_df = pd.DataFrame({\n",
         "    'Chrom': df['Chrom'],\n",
         "    'cytoband': df['cytoband'],\n",
@@ -218,27 +218,17 @@
         "    'end': df['end']\n",
         "})\n",
         "\n",
-        "def extract_coordinates(row):\n",
-        "    pattern = r'\\((\\d+,?\\d*)-(\\d+,?\\d*)\\)'\n",
-        "    match = re.search(pattern, row)\n",
-        "    if match:\n",
-        "        start = match.group(1).replace(',', '.')\n",
-        "        end = match.group(2).replace(',', '.')\n",
-        "        return pd.Series([start, end])\n",
-        "    else:\n",
-        "        return pd.Series(['', ''])\n",
-        "\n",
         "new_df['start'] = new_df['start'].replace(',', '', regex=True)\n",
         "new_df['end'] = new_df['end'].replace(',', '', regex=True)\n",
         "\n",
-        "# Salva a nova dataframe em um arquivo CSV\n",
+        "# Save the new dataframe to a CSV file\n",
         "new_df.to_csv('nova_dataframe_fron.csv', sep=\";\", index=False, decimal='.')\n",
         "\n"
       ],
       "metadata": {
         "id": "OLmIC-EGVIaH"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -246,38 +236,39 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "# Ler o arquivo CSV\n",
-        "data = pd.read_csv('LOHx.csv', sep=';')\n",
+        "# Read the CSV file\n",
+        "data = pd.read_csv('lcsh_data.csv', sep=';')\n",
         "\n",
-        "# Contar a quantidade de valores únicos na coluna \"File\"\n",
+        "# Count the number of unique values in the \"File\" column\n",
         "file_count = data['File'].nunique()\n",
         "\n",
-        "# Imprimir o total de casos \"File\"\n",
-        "print(f\"O total de casos na coluna 'File' é: {file_count}\")\n",
+        "# Print the total number of cases in the \"File\" column\n",
+        "print(f\"The total number of cases in the 'File' column is: {file_count}\")\n",
         "\n",
-        "# Armazenar o resultado em uma variável\n",
+        "# Store the result in a variable\n",
         "result0 = pd.DataFrame([file_count])\n",
         "\n",
-        "# Salvar o resultado em um arquivo CSV\n",
+        "# Save the result to a CSV file\n",
         "result0.to_csv('output.csv', sep=';', index=False)\n",
         "\n",
-        "# Imprimir o resultado\n",
-        "print(result0)\n"
+        "# Print the result\n",
+        "print(result0)\n",
+        "\n"
       ],
       "metadata": {
         "id": "Mt-d62ocmygS",
-        "outputId": "4823fcce-e534-4023-a8dc-6a4f0541f92d",
+        "outputId": "6eb25b4a-c15f-4f46-8550-7183bcd9c9cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "O total de casos na coluna 'File' é: 917\n",
+            "The total number of cases in the 'File' column is: 917\n",
             "     0\n",
             "0  917\n"
           ]
@@ -289,89 +280,33 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "# Ler arquivo de entrada (assumindo que esteja em formato csv)\n",
+        "# Read input file (assuming it is in csv format)\n",
         "df = pd.read_csv('nova_dataframe_fron.csv', sep=\";\")\n",
         "result = 917\n",
         "\n",
-        "# Agrupar por cromossomo e citobanda, incluindo o número de cromossomo na agregação\n",
+        "# Group by chromosome and cytoband, including the chromosome number in the aggregation\n",
         "grouped_df = df.groupby(['Chrom', 'cytoband']).agg({'start': 'median', 'end': 'median', 'Chrom': ['count', 'first']})\n",
         "\n",
-        "# Renomear colunas\n",
+        "# Rename columns\n",
         "grouped_df.columns = ['start', 'end', 'frequency', 'Chrom']\n",
         "\n",
-        "# Normalizar frequência em relação a um valor de referência\n",
+        "# Normalize frequency with respect to a reference value\n",
         "grouped_df['normalized_frequency'] = grouped_df['frequency'] / result\n",
         "\n",
-        "# Salvar resultado em um novo arquivo csv\n",
+        "# Save result to a new csv file\n",
         "grouped_df.to_csv('resultado.csv', index=False)\n",
         "\n",
-        "# Encontrar casos com frequência absoluta maior que 5%\n",
-        "frequencia_absoluta = grouped_df[grouped_df['frequency'] >= 0.005 * len(df)]\n",
+        "# Find cases with absolute frequency greater than 5%\n",
+        "absolute_frequency = grouped_df[grouped_df['frequency'] >= 0.005 * len(df)]\n",
         "\n",
-        "# Salvar casos em um novo arquivo csv\n",
-        "frequencia_absoluta.to_csv('frequencia_absoluta.csv', sep=\";\", index=True, decimal='.')\n"
+        "# Save cases to a new csv file\n",
+        "absolute_frequency.to_csv('frequencia_absoluta.csv', sep=\";\", index=True, decimal='.')\n"
       ],
       "metadata": {
         "id": "IvgOG6LjNPF8"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "\n",
-        "# Ler arquivo de entrada (assumindo que esteja em formato csv)\n",
-        "df = pd.read_csv('nova_dataframe_fron.csv', sep=\";\")\n",
-        "result = 917\n",
-        "\n",
-        "# Agrupar por cromossomo e citobanda, incluindo o número de cromossomo na agregação\n",
-        "grouped_df = df.groupby(['Chrom', 'cytoband']).agg({'start': 'median', 'end': 'median', 'Chrom': ['count', 'first']})\n",
-        "\n",
-        "# Renomear colunas\n",
-        "grouped_df.columns = ['start', 'end', 'frequency', 'Chrom']\n",
-        "\n",
-        "# Normalizar frequência em relação a um valor de referência\n",
-        "grouped_df['normalized_frequency'] = grouped_df['frequency'] / result\n",
-        "\n",
-        "# Formatar as colunas 'start' e 'end'\n",
-        "grouped_df[['start', 'end']] = grouped_df[['start', 'end']].astype(int).applymap('{:09d}'.format)\n",
-        "\n",
-        "\n",
-        "# Salvar resultado em um novo arquivo csv\n",
-        "grouped_df.to_csv('resultado.csv', index=False)\n",
-        "\n",
-        "# Encontrar casos com frequência absoluta maior que 5%\n",
-        "frequencia_absoluta = grouped_df[grouped_df['frequency'] >= 0.005 * len(df)]\n",
-        "# Arredondar colunas start, end e normalized_frequency\n",
-        "frequencia_absoluta['normalized_frequency'] = frequencia_absoluta['normalized_frequency'].round(decimals=3)\n",
-        "\n",
-        "# Salvar casos em um novo arquivo csv\n",
-        "frequencia_absoluta.to_csv('frequencia_absoluta.csv', sep=\";\", index=True, decimal='.')\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hGfq9jgGT-1J",
-        "outputId": "920cde02-e194-4890-f9da-0913cab07cae"
-      },
-      "execution_count": 110,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-110-9f7aa87ac9b0>:25: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  frequencia_absoluta['normalized_frequency'] = frequencia_absoluta['normalized_frequency'].round(decimals=3)\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -422,15 +357,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HkoCsUgRXrll",
-        "outputId": "9ea1040b-f580-401d-b97c-1ef674eff0d2"
+        "outputId": "e1c3d339-8a71-4815-d53b-3959581e7116"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-115-a23bf8fd2112>:29: SettingWithCopyWarning: \n",
+            "<ipython-input-15-a23bf8fd2112>:29: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -450,9 +385,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TW8AoOkuNh5M",
-        "outputId": "d7faded9-a27c-4d3f-8104-c6da426fba64"
+        "outputId": "435eba5f-998f-4ce4-dd25-650a4f86cf62"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
